--- a/nyomtatas.html
+++ b/nyomtatas.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 <head>
-  <title>Forrásoldal</title>
+  <title>Nyomtatás</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="nyomtatas.css">
+  <script src="nyomtatas.js"></script>
 </head>
 <body>
 
