--- a/nyomtatas.html
+++ b/nyomtatas.html
@@ -24,12 +24,14 @@
   <div class="row">
     <div class="col-md-4 bg-torzs">
       <h3>Magasnyomtatás</h3>
-      <p>A nyomtatás Kínában már a 8. században feltehetőleg ismert volt. A ma ismert legrégebbi bizonyíték egy 868-ban készült Gyémánt szútra, de a források alapján már 812-től papírpénzt is előállítottak, amelyhez nélkülözhetetlen a nyomtatás. A magasnyomtatás kezdetleges formáját, a fadúcos nyomtatást alkalmazták, amely abból állt, hogy egy kézzel vésett falapot befestékeztek, majd egy papírlapot ráterítettek, és száraz kefével a hátoldalát dörzsölve hozzásimították. Ugyanekkor már megpróbálkoztak fából faragott, szedhető írásjegyekkel is, jó néhány nyomtatott könyvet készítettek, de az eljárás nem terjedt el széles körben.</p>     
+      <p>A nyomtatás Kínában már a 8. században feltehetőleg ismert volt. A ma ismert legrégebbi bizonyíték egy 868-ban készült Gyémánt szútra, de a források alapján már 812-től papírpénzt is előállítottak, amelyhez nélkülözhetetlen a nyomtatás. A magasnyomtatás kezdetleges formáját, a fadúcos nyomtatást alkalmazták, amely abból állt, hogy egy kézzel vésett falapot befestékeztek, majd egy papírlapot ráterítettek, és száraz kefével a hátoldalát dörzsölve hozzásimították. Ugyanekkor már megpróbálkoztak fából faragott, szedhető írásjegyekkel is, jó néhány nyomtatott könyvet készítettek, de az eljárás nem terjedt el széles körben.</p> 
+      <p><img src="kezi_szedes.jpg" alt="kezi_szedes" title="kezi_szedes" class="img-thumbnail"></p>    
     </div>
     <div class="col-md-4">
       <h3>Síknyomtatás</h3>
       <p>1796-ban <a href=" https://hu.wikipedia.org/wiki/Alois_Senefelder" target="_blank">Alois Senefelder</a> feltalálja a litográfiát, és ezzel együtt kidolgozta a síknyomtatás elvét. Először maratással kialakított rézlemezt használ magasnyomóformaként, majd olcsóbb anyagokat keres. Kísérletei közben mészkövet is használ, melynél véletlenül felfedezi, hogy a vizes felületen nem tapad meg a festék. Az ő nevéhez fűződik még a fémfelületről történő síknyomtatás bevezetése is.</p>
       <p>Ugyanez az elv az alapja a bádognyomtatásnak is, melyet plakátgyártásnál, konzervdoboz gyártásnál használtak. Szintén ebből fejlődött ki a ma leginkább elterjedt ofszetnyomtatás, mely szintén egy közvetett nyomtatási forma.</p>
+      <p><img src="ofszet_nyomogep.jpg" title="ofszet_nyomogep"class="img-thumbnail" alt="ofszet_nyomogep"></p>
     </div>
     <div class="col-md-4 bg-torzs">
       <h3>Szitanyomtatás</h3>        
@@ -44,6 +46,7 @@
     <div class="col-md-6 bg-torzs">
       <h3>Digitális eljárások</h3>        
       <p>A számítástechnika fejlődésével fokozatosan épültek be a nyomdaiparba. Először a fényszedésnél jelentek meg szövegek szerkesztésénél, tördelésénél, majd a fényképészetben is elterjedtek. Ezután megjelentek a nyomóformakészítésben is. Legelterjedtebb formája az ofszetnyomtatásnál alkalmazott CTP. A személyi számítógépekhez használt nyomtatók ugyan már régóta digitális eljárásokkal működnek, de nyomdászati célokra kevés területen használják. A hagyományosan nyomóformáról történő nyomtatással szemben eléggé lassúnak mondható. Eleinte kisebb példányszámú, kevésbé igényes termékeket gyártottak vele, de napjainkban akár 4-500 példányszámú nyomatok gazdaságos, jó minőségű nyomtatására is van lehetőség. </p>
+      <p><img src="nyomdagep_pultja.jpg" title="nyomdagep_pultja"class="img-thumbnail" alt="nyomdagep_pultja"></p>
     </div>
     
   </div>
